Swap some subsections + misc updates.

--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -188,6 +188,307 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Using interact as a decorator with named parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To me, this is the best option..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(text=\"IPython Widgets\")\n",
+    "def greeting(text):\n",
+    "    print(\"Hello {}\".format(text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Integer (IntSlider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(num=5)\n",
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Float (FloatSlider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(num=5.)\n",
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Boolean (Checkbox)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(upper=False)\n",
+    "def greeting(upper):\n",
+    "    text = \"hello\"\n",
+    "    if upper:\n",
+    "        print(text.upper())\n",
+    "    else:\n",
+    "        print(text.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List (Dropdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(name=[\"John\", \"Bob\", \"Alice\"])\n",
+    "def greeting(name):\n",
+    "    print(\"Hello {}\".format(name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dictionnary (Dropdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(word={\"One\": \"Un\", \"Two\": \"Deux\", \"Three\": \"Trois\"})\n",
+    "def translate(word):\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.arange(-2 * np.pi, 2 * np.pi, 0.1)\n",
+    "\n",
+    "@interact(function={\"Sin\": np.sin, \"Cos\": np.cos})\n",
+    "def plot(function):\n",
+    "    y = function(x)\n",
+    "    plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using interact as a decorator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def greeting(text=\"World\"):\n",
+    "    print(\"Hello {}\".format(text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Integer (IntSlider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def square(num=2):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Float (FloatSlider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def square(num=5.):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Boolean (Checkbox)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def greeting(upper=False):\n",
+    "    text = \"hello\"\n",
+    "    if upper:\n",
+    "        print(text.upper())\n",
+    "    else:\n",
+    "        print(text.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List (Dropdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def greeting(name=[\"John\", \"Bob\", \"Alice\"]):\n",
+    "    print(\"Hello {}\".format(name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dictionnary (Dropdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def translate(word={\"One\": \"Un\", \"Two\": \"Deux\", \"Three\": \"Trois\"}):\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.arange(-2 * np.pi, 2 * np.pi, 0.1)\n",
+    "\n",
+    "@interact\n",
+    "def plot(function={\"Sin\": np.sin, \"Cos\": np.cos}):\n",
+    "    y = function(x)\n",
+    "    plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Using interact as a function"
    ]
   },
@@ -342,301 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using interact as a decorator"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def greeting(text=\"World\"):\n",
-    "    print(\"Hello {}\".format(text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Integer (IntSlider)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def square(num=2):\n",
-    "    print(\"{} squared is {}\".format(num, num*num))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Float (FloatSlider)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def square(num=5.):\n",
-    "    print(\"{} squared is {}\".format(num, num*num))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Boolean (Checkbox)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def greeting(upper=False):\n",
-    "    text = \"hello\"\n",
-    "    if upper:\n",
-    "        print(text.upper())\n",
-    "    else:\n",
-    "        print(text.lower())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### List (Dropdown)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def greeting(name=[\"John\", \"Bob\", \"Alice\"]):\n",
-    "    print(\"Hello {}\".format(name))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Dictionnary (Dropdown)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def translate(word={\"One\": \"Un\", \"Two\": \"Deux\", \"Three\": \"Trois\"}):\n",
-    "    print(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x = np.arange(-2 * np.pi, 2 * np.pi, 0.1)\n",
-    "\n",
-    "@interact\n",
-    "def plot(function={\"Sin\": np.sin, \"Cos\": np.cos}):\n",
-    "    y = function(x)\n",
-    "    plt.plot(x, y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using interact as a decorator with named parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact(text=\"IPython Widgets\")\n",
-    "def greeting(text):\n",
-    "    print(\"Hello {}\".format(text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Integer (IntSlider)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact(num=5)\n",
-    "def square(num):\n",
-    "    print(\"{} squared is {}\".format(num, num*num))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Float (FloatSlider)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact(num=5.)\n",
-    "def square(num):\n",
-    "    print(\"{} squared is {}\".format(num, num*num))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Boolean (Checkbox)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact(upper=False)\n",
-    "def greeting(upper):\n",
-    "    text = \"hello\"\n",
-    "    if upper:\n",
-    "        print(text.upper())\n",
-    "    else:\n",
-    "        print(text.lower())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### List (Dropdown)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact(name=[\"John\", \"Bob\", \"Alice\"])\n",
-    "def greeting(name):\n",
-    "    print(\"Hello {}\".format(name))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Dictionnary (Dropdown)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "@interact(word={\"One\": \"Un\", \"Two\": \"Deux\", \"Three\": \"Trois\"})\n",
-    "def translate(word):\n",
-    "    print(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x = np.arange(-2 * np.pi, 2 * np.pi, 0.1)\n",
-    "\n",
-    "@interact(function={\"Sin\": np.sin, \"Cos\": np.cos})\n",
-    "def plot(function):\n",
-    "    y = function(x)\n",
-    "    plt.plot(x, y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use several widgets on one function"
+    "### Example of using multiple widgets on one function"
    ]
   },
   {
@@ -675,172 +682,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "054e5159df654348a9aeef1f06ac8d10": {
-     "views": [
-      {
-       "cell_index": 7
-      }
-     ]
-    },
-    "1afe36573c884cdcba6ed730453f0ee1": {
-     "views": [
-      {
-       "cell_index": 41
-      }
-     ]
-    },
-    "1b06e600555c44b798aa00f1871fa446": {
-     "views": [
-      {
-       "cell_index": 32
-      }
-     ]
-    },
-    "2ea7285d427347a3858d85857e08974c": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "2f825c9d338749b0a73a9cd454e95fd4": {
-     "views": [
-      {
-       "cell_index": 20
-      }
-     ]
-    },
-    "4190249562d7423c8fdb408cba53bf7b": {
-     "views": [
-      {
-       "cell_index": 34
-      }
-     ]
-    },
-    "45e6802d1a244caf9d1536fce72b371b": {
-     "views": [
-      {
-       "cell_index": 54
-      }
-     ]
-    },
-    "540dd2e7acad46e8ba8224698a079819": {
-     "views": [
-      {
-       "cell_index": 36
-      }
-     ]
-    },
-    "6bb3eaa97df444f194c61791121d9ee0": {
-     "views": [
-      {
-       "cell_index": 40
-      }
-     ]
-    },
-    "731c03b1b6db4c09b34e55357f7661c8": {
-     "views": [
-      {
-       "cell_index": 12
-      }
-     ]
-    },
-    "9813f0f8b9c9434da97408702ed8e17a": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
-    },
-    "9b4b18310b3e4e9ca5c51faeee8712c6": {
-     "views": [
-      {
-       "cell_index": 14
-      }
-     ]
-    },
-    "a0bf2ecea1574563a11f7aeec78cdc74": {
-     "views": [
-      {
-       "cell_index": 22
-      }
-     ]
-    },
-    "a92fba05797646049147152155c1ea04": {
-     "views": [
-      {
-       "cell_index": 30
-      }
-     ]
-    },
-    "bdfa84fb0dd54242839dedfbc2d1f686": {
-     "views": [
-      {
-       "cell_index": 45
-      }
-     ]
-    },
-    "bf71f2a24add454fa30e14ad4dbb284d": {
-     "views": [
-      {
-       "cell_index": 34
-      }
-     ]
-    },
-    "c76fba4b078a4f6f9ea9abf2d6f43478": {
-     "views": [
-      {
-       "cell_index": 43
-      }
-     ]
-    },
-    "c99b95645fc3445a88fc9178a6a2f0c6": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "d0fa7c2318bf4736a7c15e8a58924d6e": {
-     "views": [
-      {
-       "cell_index": 18
-      }
-     ]
-    },
-    "d37c04c2aa074aaebc02392598e7d10c": {
-     "views": [
-      {
-       "cell_index": 33
-      }
-     ]
-    },
-    "d66f584dc1d44a35bda367e375b29a9e": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "df5a2ddf7a5b42ddb6c047b5fbeb2afe": {
-     "views": [
-      {
-       "cell_index": 44
-      }
-     ]
-    },
-    "f5bb9d6c95d64dcbbc3d34ed4583481c": {
-     "views": [
-      {
-       "cell_index": 44
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
