--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To me, this is the best option..."
+    "To me, this is the best option for single usage functions..."
    ]
   },
   {
@@ -239,6 +239,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(num=(0, 100))\n",
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(num=(0, 100, 10))\n",
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,6 +280,33 @@
    "outputs": [],
    "source": [
     "@interact(num=5.)\n",
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(num=(0., 10.))\n",
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "@interact(num=(0., 10., 0.5))\n",
     "def square(num):\n",
     "    print(\"{} squared is {}\".format(num, num*num))"
    ]
@@ -386,6 +439,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def square(num=(0, 100)):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def square(num=(0, 100, 10)):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -402,6 +481,33 @@
    "source": [
     "@interact\n",
     "def square(num=5.):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def square(num=(0., 10.)):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def square(num=(0., 10., 0.5)):\n",
     "    print(\"{} squared is {}\".format(num, num*num))"
    ]
   },
@@ -496,6 +602,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To me, this is the best option for multiple usage functions..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Text"
    ]
   },
@@ -535,6 +648,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))\n",
+    "\n",
+    "interact(square, num=(0, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))\n",
+    "\n",
+    "interact(square, num=(0, 100, 10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -553,6 +694,35 @@
     "    print(\"{} squared is {}\".format(num, num*num))\n",
     "\n",
     "interact(square, num=5.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))\n",
+    "\n",
+    "interact(square, num=(0., 10.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def square(num):\n",
+    "    print(\"{} squared is {}\".format(num, num*num))\n",
+    "\n",
+    "interact(square, num=(0., 10., 0.5))"
    ]
   },
   {
