Add an interactive section for a line equation demo.

--- a/euclidean_geometry.ipynb
+++ b/euclidean_geometry.ipynb
@@ -25,7 +25,41 @@
     "%matplotlib inline\n",
     "import math\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from ipywidgets import interact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Line equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(a=(-5., 5., 0.1), b=(-5., 5., 0.1), c=(-5., 5., 0.1))\n",
+    "def plot(a, b, c):\n",
+    "    plt.axis('equal')\n",
+    "    plt.axis([-5, 5, -5, 5])\n",
+    "    plt.xticks(np.arange(-5,5,1))\n",
+    "    plt.yticks(np.arange(-5,5,1))\n",
+    "    plt.axhline(y=0, color='k')\n",
+    "    plt.axvline(x=0, color='k')\n",
+    "\n",
+    "    x = np.array([-10., 10.])\n",
+    "    f = lambda x: a/(-b) * x + c/(-b)\n",
+    "    \n",
+    "    plt.plot(x, f(x))\n",
+    "\n",
+    "    plt.grid()"
    ]
   },
   {
