Add a snippet for time measurement.

--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -121,6 +121,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Time measurement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(np.random.normal(loc=0.0, scale=1.0, size=100000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ipywidget"
    ]
   },
