--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -121,7 +121,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time measurement"
+    "## IPython built-in magic commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See http://ipython.readthedocs.io/en/stable/interactive/magics.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time measurement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### %time"
    ]
   },
   {
@@ -133,7 +154,14 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "print(\"hello\")"
+    "plt.hist(np.random.normal(loc=0.0, scale=1.0, size=100000), bins=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### %timeit"
    ]
   },
   {
@@ -144,7 +172,8 @@
    },
    "outputs": [],
    "source": [
-    "plt.hist(np.random.normal(loc=0.0, scale=1.0, size=100000))"
+    "%%timeit\n",
+    "plt.hist(np.random.normal(loc=0.0, scale=1.0, size=100000), bins=50)"
    ]
   },
   {
