--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -71,6 +71,10 @@
     "* Copy selected cells: c\n",
     "* Paste copied cells below: v\n",
     "\n",
+    "\n",
+    "* Select the previous cell: k\n",
+    "* Select the next cell: j\n",
+    "\n",
     "In **edit** mode:\n",
     "\n",
     "* Code completion or indent: Tab\n",
@@ -129,6 +133,24 @@
    "metadata": {},
    "source": [
     "See http://ipython.readthedocs.io/en/stable/interactive/magics.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execute an external python script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%run ./notebook_snippets_run_test.py"
    ]
   },
   {
