--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -89,7 +89,10 @@
     "\n",
     "* Execute the selected cell: Ctrl + Enter\n",
     "* Execute the selected cell and select the next cell: Shift + Enter\n",
-    "* Execute the selected cell and insert below: Alt + Enter"
+    "* Execute the selected cell and insert below: Alt + Enter\n",
+    "\n",
+    "\n",
+    "* Cut a cell at the current cursor position: Ctrl + Shift + -"
    ]
   },
   {
@@ -912,6 +915,27 @@
     "        print(text.upper())\n",
     "    else:\n",
     "        print(text.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert a Reveal.js presentation written with Markdown to a Jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a **quick and dirty hack** to have one cell per slide in the notebook; it assumes the string \"---\" is used to separate slides within the markdown file.\n",
+    "\n",
+    "1. copy the markdown document within the Jupyter notebook (in a Markdown cell), save it and close it;\n",
+    "2. to split this cell at each \"---\", open the ipynb notebook with vim and enter the following command and save the file:\n",
+    "\n",
+    "```\n",
+    ":%s/,\\n    \"---\\\\n\",/\\r   ]\\r  },\\r  {\\r   \"cell_type\": \"markdown\",\\r   \"metadata\": {},\\r   \"source\": [/gc\n",
+    "```"
    ]
   }
  ],
