--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -157,6 +157,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%run ./notebook_snippets_run_mpl_test.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
