Add a table of contents in JS + misc additions.

--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -8,6 +8,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<div id=\"toc\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "var toc = document.getElementById(\"toc\");\n",
+    "toc.innerHTML = \"<b>Table of contents:</b>\";\n",
+    "toc.innerHTML += \"<ol>\"\n",
+    "\n",
+    "var h2_list = document.getElementsByTagName(\"h2\");\n",
+    "for (var i = 0; i < h2_list.length; i++) {\n",
+    "    var h2 = h2_list[i];\n",
+    "    var h2_str = h2.textContent.slice(0, -1);  // \"slice(0, -1)\" remove the last character \n",
+    "    toc.innerHTML += \"<li><a href=\\\"#\" + h2_str.replace(/\\s+/g, '-') + \"\\\">\" + h2_str + \"</a></li>\";\n",
+    "}\n",
+    "\n",
+    "toc.innerHTML += \"</ol>\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,6 +200,67 @@
    "outputs": [],
    "source": [
     "%run ./notebook_snippets_run_mpl_test.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load an external python script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load the full script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%load ./notebook_snippets_run_mpl_test.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load a specific symbol (funtion, class, ...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%load -s main ./notebook_snippets_run_mpl_test.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load specific lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%load -r 22-41 ./notebook_snippets_run_mpl_test.py"
    ]
   },
   {
