--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -8,6 +8,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<div id=\"toc\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "var toc = document.getElementById(\"toc\");\n",
+    "toc.innerHTML = \"<b>Table of contents:</b>\";\n",
+    "toc.innerHTML += \"<ol>\"\n",
+    "\n",
+    "var h2_list = document.getElementsByTagName(\"h2\");\n",
+    "for (var i = 0; i < h2_list.length; i++) {\n",
+    "    var h2 = h2_list[i];\n",
+    "    var h2_str = h2.textContent.slice(0, -1);  // \"slice(0, -1)\" remove the last character \n",
+    "    toc.innerHTML += \"<li><a href=\\\"#\" + h2_str.replace(/\\s+/g, '-') + \"\\\">\" + h2_str + \"</a></li>\";\n",
+    "}\n",
+    "\n",
+    "toc.innerHTML += \"</ol>\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,7 +58,150 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Series (1D data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With automatic indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_list = [1, 3, np.nan, 7]\n",
+    "serie = pd.Series(data_list)\n",
+    "serie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array(data_list)\n",
+    "serie = pd.Series(data_array)\n",
+    "serie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With defined indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "indices = pd.Series([1, 3, 5, 7])\n",
+    "serie = pd.Series([10, 30, 50, 70], index=indices)\n",
+    "serie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "indices = pd.Series(['A', 'B', 'C', 'D'])\n",
+    "serie = pd.Series([10, 30, 50, 70], index=indices)\n",
+    "serie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frames (2D data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With automatic indices and columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "serie = pd.DataFrame(data_array)\n",
+    "serie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With defined indices and columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "serie = pd.DataFrame(data_array, index=[10, 20], columns=[100, 200, 300])\n",
+    "serie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With columns from dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_dict = {'A': 'foo',\n",
+    "             'B': [10, 20, 30],\n",
+    "             'C': 3}\n",
+    "serie = pd.DataFrame(data_dict)\n",
+    "serie"
    ]
   },
   {
@@ -41,8 +219,8 @@
    },
    "outputs": [],
    "source": [
-    "gam = pd.read_csv(\"foo.csv.gz\").groupby('JSON input file')\n",
-    "gam['e_shape'].plot.hist(alpha=0.2, bins=100, legend=True)"
+    "#gam = pd.read_csv(\"foo.csv.gz\").groupby('JSON input file')\n",
+    "#gam['e_shape'].plot.hist(alpha=0.2, bins=100, legend=True)"
    ]
   }
  ],
